--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <script>
 function redirectToHome() {
-    window.location.href = "index.html"; 
+    window.location.href = "home.html"; 
 }
 </script>
         </form>
